--- a/index.html
+++ b/index.html
@@ -102,6 +102,70 @@
                 </div>
             </div> -->
         </div>
+
+        <div class="row mt-5">
+            <div class="col">
+                <h1>Houses
+                    <button title="Open Create House Form" type="button" class="btn btn-outline-success"
+                        data-toggle="modal" data-target="#new-house-form">
+                        <i class="fas fa-plus" aria-hidden="true"></i>
+                    </button>
+                </h1>
+            </div>
+        </div>
+        <div class="modal fade" id="new-house-form" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">New House</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <!-- when submitted run the function provided
+                    this can be triggered by the button or the enter key -->
+                    <form onsubmit="app.housesController.createHouse()">
+                        <div class="modal-body">
+                            <!-- Form to create a car  -->
+                            <div class="form-group">
+                                <label for="bedrooms">Bedrooms</label>
+                                <!-- the id determines the property on the form object -->
+                                <input type="number" class="form-control" id="bedrooms" placeholder="Bedrooms..."
+                                    required>
+                            </div>
+                            <div class="form-group">
+                                <label for="bath">Bathrooms</label>
+                                <input type="number" class="form-control" id="bath" placeholder="Bath..." required>
+                            </div>
+                            <div class="form-group">
+                                <label for="sqFootage">Square Footage</label>
+                                <input type="number" class="form-control" id="sqFootage" placeholder="SqFootage..."
+                                    required>
+                            </div>
+                            <div class="form-group">
+                                <label for="address">Address</label>
+                                <input type="text" class="form-control" id="address" placeholder="Address.." required>
+                            </div>
+                            <div class="form-group">
+                                <label for="price">Price</label>
+                                <input type="number" class="form-control" id="price" placeholder="Price..." required>
+                            </div>
+                            <div class="form-group">
+                                <label for="imgUrl">Image Url</label>
+                                <input type="text" class="form-control" id="imgUrl" placeholder="Url..." required>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="submit" class="btn btn-primary">Create</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="row" id="houses">
+        </div>
     </main>
     <footer class="container-fluid bg-dark text-light">
         <div class="row text-center">
